syntax = "proto3";

option java_multiple_files = true;
option java_package = "net.expertio.domain";
option java_outer_classname = "UserProto";
option objc_class_prefix = "EAPI";

import "google/protobuf/timestamp.proto";

package core;

message GetProfileRequest {
    int64 id = 1;
}

message GetUserRequest {
    int64 id = 1;
}

message Profile {
    int32 id = 1;
    string uuid = 2;
}

message User {
    int32 id = 1;
    string first_name = 2;
    string last_name = 3;
    google.protobuf.Timestamp event_time = 4;
}
